# OpenGLCode

./: README.md
OpenGLSample/: OpenGLSample.pro  main.cpp  triangle.cpp  triangle.h
OpenGLSample/glad/include/glad/: glad.h
OpenGLSample/glad/src/: glad.c
UnitsFinder/: CMakeLists.txt  IsSeeUnit.h  IsSeeUnit.hpp  UnitsFinder.pro  main.cpp  main.cpp.autosave  units.csv
